SERVER-80397 Make explain distinct command return expected tenant prefix if required by clients